# Filename: Makefile.am
# Author: David Mattli <dmattli@usgs.gov>
# License: PUBLIC DOMAIN

lib_LIBRARY = gctp_cpp

noinst_LIBRARIES = libgctp_cpp.a

AM_CXXFLAGS = -fPIC -W -Wall -Wextra -Wcast-align \
		-Wpointer-arith -Wsign-compare -g\
		-Wformat=2 -Wno-format-y2k  -Wmissing-braces -Wparentheses \
		-Wtrigraphs # -Wshadow -Wstrict-prototypes -Wnested-externs -Wimplicit


libgctp_cpp_CXXFLAGS = -fPIC
libgctp_cpp_a_SOURCES = alaskaconformal.cpp \
           albersConEqArea.cpp \
           azequidistant.cpp \
           constants.cpp \
           coordinate.cpp \
           cproj.cpp \
           equidistantc.cpp \
           equirectangular.cpp \
           genvertnsp.cpp \
           gnomonic.cpp \
           goodeh.cpp \
           hammer.cpp \
           hotinobmerc.cpp \
           intmollweide.cpp \
           lambertazimuth.cpp \
           lambertcc.cpp \
           mercator.cpp \
           miller.cpp \
           Mollweide.cpp \
           oblatedeqarea.cpp \
           orthographic.cpp \
           polarstereo.cpp \
           polyconic.cpp \
           projection.cpp \
           robinson.cpp \
           sinusoidal.cpp \
           spaceobmerc.cpp \
           stereo.cpp \
           transformer.cpp \
           transversemercator.cpp \
           util.cpp \
           utm.cpp \
           vandergrinten.cpp \
           wagneriv.cpp \
           wagnervii.cpp 
