AUTOMAKE_OPTIONS = foreign

lib_LIBRARY = prp
noinst_LIBRARIES = libprp.a

libprp_a_SOURCES =   prProcess.cpp \
	               quadID.cpp \
	               quadtreeNode.cpp \
	               subSpaceInfo.cpp \
	               subIDMap.cpp \
	               subInfoVect.cpp \
	               subSpaceMap.cpp